--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>{{ site.title | default: "archives" }}</title>
+    <title>Archives</title>
     <meta name="description" content="Minimal portfolio and blog index" />
     <style>
       :root {
@@ -243,7 +243,7 @@
     </script>
 
       <footer>
-        <span>© {{ site.time | date: '%Y' }} · Built for GitHub Pages</span>
+        <span>© <script>document.write(new Date().getFullYear());</script> · All rights reserved</span>
       </footer>
     </main>
   </body>
