--- a/index.html
+++ b/index.html
@@ -175,10 +175,8 @@
         <h2>About</h2>
         <p>
           Hey there! I'm Manish Biswal, a developer who’s all about building
-          cool stuff and sharing the journey. Contributor at GSoC, tech geek,
-          and always exploring the next big thing. This is my little corner of
-          the web where I drop my thoughts, projects, and tech hacks. Dive in,
-          vibe with the blogs, and let's connect!
+          and breaking stuffs. Contributor at GSoC. This is my little corner of
+          the web where I drop my thoughts, projects.
         </p>
       </section>
 
