--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
               rel="noopener"
               >Twitter</a
             >
+            <a href="mera_resume.pdf" target="_blank" rel="noopener">Resume</a>
           </div>
         </div>
       </header>
