--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               rel="noopener"
               >Twitter</a
             >
-            <a href="mera_resume.pdf" target="_blank" rel="noopener">Resume</a>
+            <a href="mera_resume_2.pdf" target="_blank" rel="noopener">Resume</a>
           </div>
         </div>
       </header>
